<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chowlb.gamelender.ui.LoginActivity" >

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background_image" />

    <TextView
        android:id="@+id/logoText"
        style="@style/AuthTitle" />

    <LinearLayout
        android:id="@+id/editTextLinearLayout"
        style="@style/AuthFieldContainer" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLinearLayout"
        android:layout_alignParentLeft="true"
        android:text="@string/login_button_label" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_text"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordText"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_text"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>